changes some coding standards and collection type to its base interface