@@ -2,60 +2,59 @@ package com.hit.algorithms;
 
 import java.util.HashMap;
 import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
 
 
-
-
-public class LRUAlgoCacheImpl<K,V> extends AbstractAlgoCache<K,V> implements IAlgoCache<K,V>{	
-	LinkedList<K> m_Cache;
-	HashMap<K,V> m_Mapping;
+public class LRUAlgoCacheImpl<K,V> extends AbstractAlgoCache<K,V> implements IAlgoCache<K,V>{
+	private List<K> cache;
+	private Map<K, V> mapping;
 	
 	
-	public LRUAlgoCacheImpl(int io_Capacity) {
-		super(io_Capacity);
-		m_Cache=new LinkedList<K>();
-		m_Mapping=new HashMap<K,V>();
+	public LRUAlgoCacheImpl(int capacity) {
+		super(capacity);
+		cache = new LinkedList<K>();
+		mapping =new HashMap<K,V>();
 		
 		// TODO Auto-generated constructor stub
 	}
 	
-	private void bringToTheFront(K i_Key)
+	private void bringToTheFront(K key)
 	{
-		m_Cache.remove(i_Key);
-		m_Cache.addFirst(i_Key);
+		cache.remove(key);
+		cache.add(0, key);
 	}
 
 	@Override
-	public V getElement(K i_Key) 
+	public V getElement(K key)
 	{
-		if(m_Cache.contains(i_Key))
+		if(cache.contains(key))
 		{
-			bringToTheFront(i_Key);
-			return m_Mapping.get(i_Key);
+			bringToTheFront(key);
+			return mapping.get(key);
 		}	
 		return null;
-		
 	}
 
 	@Override
-	public V putElement(K io_Key, V io_Value){
-		if(!m_Cache.contains(io_Key)){
-			if(m_Cache.size()==m_Capacity)
+	public V putElement(K key, V value){
+		if(!cache.contains(key)){
+			if(cache.size() == getCapacity())
 			{
-				m_Mapping.remove(m_Cache.getLast());
-				m_Cache.removeLast();
+				mapping.remove(cache.get(cache.size() - 1));
+				cache.remove(cache.size() - 1);
 				
 			}
 			
-			m_Mapping.put(io_Key, io_Value);
-			m_Cache.addFirst(io_Key);
+			mapping.put(key, value);
+			cache.add(0, key);
 		}
-		return io_Value;		
+		return value;
 	}
 
 	@Override
-	public void removeElement(K io_key) {
-		m_Mapping.remove(io_key);
-		m_Cache.remove(io_key);	
+	public void removeElement(K key) {
+		mapping.remove(key);
+		cache.remove(key);
 	}
 }
